# mythos

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  Modelfile  README.md  REPORT.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  tests.yml
configs/model/: 10m.yaml  150m.yaml  30m.yaml  80m.yaml  base_500m.yaml  debug.yaml
configs/training/: 150m.yaml  ablation_gelu.yaml  ablation_mha.yaml  base.yaml
docs/: ABLATIONS.md  ARCHITECTURE.md  GIT_WORKFLOW.md  LIMITATIONS.md  MODEL_CARD.md  PROMOTION.md  RESEARCH.md  SCALING.md  TRAINING.md
notebooks/: 01_architecture_walkthrough.ipynb  02_inference_demo.ipynb  03_attention_analysis.ipynb
scripts/: eval.py  export_gguf.py  export_hf.py  fit_scaling_laws.py  infer.py  prepare_data.py  test_device.py  test_model.py  train.py
src/: __init__.py  model.py  utils.py
src/core/: __init__.py  attention.py  mlp.py  norms.py  transformer.py
src/inference/: __init__.py  generate.py
src/mythos/: __init__.py
src/mythos.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/mythos/core/: __init__.py  rope.py  transformer.py
src/mythos/data/: dataset.py
src/mythos/data/pipelines/: clean.py  deduplicate.py  tokenize.py
src/mythos/inference/: __init__.py  generate.py  sampler.py
src/mythos/training/: checkpoint.py  loop.py  optimizer.py  scheduler.py  trainer.py
src/mythos/utils/: __init__.py  config.py  device.py
src/training/: loop.py  optimizer.py  scheduler.py  trainer.py
src/utils/: __init__.py  logging.py
tests/: test_model.py  test_training.py
tests/integration/: test_overfit.py
